force-app/main/default/objects/ResponseToModel__mdt/ResponseToModel__mdt.object-meta.xml
<CustomObject>
    <label>ResponseToModel</label>
    <pluralLabel>ResponseToModels</pluralLabel>
</CustomObject>