force-app/main/default/objects/ResponseToModel__mdt/fields/API_Response_To_Modal_Mapping__c.field-meta.xml
<CustomField>
    <fullName>API_Response_To_Modal_Mapping__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the class name for which node will be parsed</description>
    <label>API_Response_To_Modal_Mapping</label>
    <referenceTo>API_Response_To_Modal_Mapping__mdt</referenceTo>
    <relationshipLabel>ResponseToModels</relationshipLabel>
    <relationshipName>ResponseToModels</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>