force-app/main/default/objects/ResponseToModel__mdt/fields/ConversionType__c.field-meta.xml
<CustomField>
    <fullName>ConversionType__c</fullName>
    <label>ConversionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>