force-app/main/default/objects/ResponseToModel__mdt/fields/ModelNode__c.field-meta.xml
<CustomField>
    <fullName>ModelNode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the node which needs to be converted</description>
    <label>ModelNode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>