force-app/main/default/objects/ResponseToModel__mdt/fields/ReponseNode__c.field-meta.xml
<CustomField>
    <fullName>ReponseNode__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Describes the name of new node</description>
    <label>ReponseNode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>