force-app/main/default/objects/ResponseToModel__mdt/listViews/Detailed_Fields.listView-meta.xml
<ListView>
    <fullName>Detailed_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>ModelNode__c</columns>
    <columns>ReponseNode__c</columns>
    <columns>API_Response_To_Modal_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detailed Fields</label>
    <language>en_US</language>
</ListView>